--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Password Generator</title>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./assests/style.css" />
   </head>
   <body>
     <div class="wrapper">
@@ -61,6 +61,6 @@
       </div>
       <div id="overlay"></div>
     </div>
-    <script src="./script.js"></script>
+    <script src="./assests/script.js"></script>
   </body>
 </html>
