--- a/index.html
+++ b/index.html
@@ -25,41 +25,10 @@
           ></textarea>
         </div>
         <div class="card-footer">
-          <button id="generate" data-pop-target="#criteria" class="btn">Generate Password</button>
+          <button id="generate"
+          class="btn">Generate Password</button>
         </div>
       </div>
-      <div id="criteria">
-          <div id="pop-head">
-            <h3>Select all that apply</h3>
-            <div>
-              <button data-cls-btn id="cls-btn">&times;</button>
-            </div>
-          </div>
-          <form action="" id="buttons">
-            <div>
-              <input type="text" id="length" name="length" placeholder="Length of Password">
-            </div>
-
-            <div id="char-type">
-              <span>Character Types</span><br>
-
-              <input class="checkbox" type="checkbox" id="lowercase"  name="lowercase" >
-              <label for="lowercase">Lowercase</label><br>
-
-              <input class="checkbox"  type="checkbox" id="uppercase" name="uppercase">
-              <label for="uppercase">Uppercase</label><br>
-
-              <input class="checkbox"  type="checkbox" id="numeric" name="numeric">
-              <label for="numeric">Numeric</label><br>
-
-              <input class="checkbox"  type="checkbox" id="special-char" name="special-char">
-              <label for="special-char">Special characters</label><br>
-              
-            </div>
-            <button id="submit" type="submit">submit</button>
-        </form>
-      </div>
-      <div id="overlay"></div>
     </div>
     <script src="./assests/script.js"></script>
   </body>
